// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multiple expenses correctly 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
     totalling 
    $600.00
  </h3>
</div>
`;

exports[`should render ExpensesSummary with one expense correctly 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $500.00
  </h3>
</div>
`;
